[tool.poetry]
name = "resty"
version = "0.1.0"
description = "An application for relaxing while working at a computer"
authors = ["Alex Leskov <alexleskov2000@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.4.2"
python-json-logger = "^2.0.4"
attrs = "21.4"
classic-components = "^1.0.0"
pydantic = ">=1.8.2,<1.9.0"
classic-app-layer = "^0.0.1"
qt-material = "^2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
